<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/deleteRow"
        android:icon="@drawable/ic_delete"
        android:title="@string/DELETE"
        app:showAsAction="always" />
    <item
        android:id="@+id/duplicateRow"
        android:icon="@drawable/ic_duplicate"
        android:title="@string/DUPLICATE" />
    <item
        android:id="@+id/cutRow"
        android:icon="@drawable/ic_cut"
        android:title="@string/cut"
        app:showAsAction="always" />
    <item
        android:id="@+id/copyRow"
        android:icon="@drawable/ic_copy"
        android:title="@string/COPY"
        app:showAsAction="always" />
    <item
        android:id="@+id/pasteRow"
        android:icon="@drawable/ic_paste"
        android:title="@string/PASTE"
        app:showAsAction="always" />
</menu>