<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cent"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/accent_primary"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:text="@string/general_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/textViewValutaType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawableStart="@drawable/ic_valuta"
        android:drawableEnd="@drawable/ic_drop_down"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:padding="16dp"
        android:singleLine="true"
        android:text="@string/change_valuta"
        android:textColor="@color/light_gray"
        android:textSize="14sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/color_background_info_card"
        android:visibility="visible">

    </FrameLayout>


    <Switch
        android:drawableStart="@drawable/ic_horizontal_scroll"
        android:drawablePadding="16dp"
        android:id="@+id/switchEnableHorizontalScrollItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:checked="false"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"
        android:showText="false"
        android:text="@string/enable_horizontal_scroll_items"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textIsSelectable="false"
        android:textSize="14sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/color_background_info_card"
        android:visibility="visible">

    </FrameLayout>


        <Switch
            android:id="@+id/switchEnableSomeStroke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_some_stroke"
            android:drawablePadding="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:checked="true"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:text="@string/enable_some_stroke"
            android:textColor="@color/light_gray"
            android:textIsSelectable="false"
            android:textSize="14sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/color_background_info_card"
        android:visibility="visible">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView

            android:padding="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_height"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/cell_height"
            android:textColor="@color/light_gray" />

        <ImageButton
            android:id="@+id/heightSizeDown"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/down_size" />

        <TextView
            android:id="@+id/heightSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="size"
            android:textColor="@color/light_gray" />

        <ImageButton

            android:id="@+id/heightSizeUp"

            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:rotation="180"
            android:src="@drawable/ic_down"
            android:contentDescription="@string/up_size" />

    </LinearLayout>

    <TextView
        android:textColor="@color/accent_primary"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp"
        android:textSize="16sp"
        android:text="@string/general_setting_totals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Switch
        android:id="@+id/switchEnableDatePeriod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:checked="true"
        android:clickable="true"
        android:drawableStart="@drawable/ic_period"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/show_date_period"
        android:textColor="@color/light_gray"
        android:textIsSelectable="false"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/color_background_info_card"
        android:visibility="visible">

    </FrameLayout>


    <Switch

        android:id="@+id/switchEnableHorizontalScrollTotals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:checked="false"
        android:clickable="true"
        android:drawableStart="@drawable/ic_horizontal_scroll"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:showText="false"
        android:text="@string/enable_horizontal_scroll_totals"
        android:textAllCaps="false"
        android:textColor="@color/light_gray"
        android:textIsSelectable="false"
        android:padding="16dp"
        android:textSize="14sp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/color_background_info_card"
        android:visibility="visible">

    </FrameLayout>


    <Switch
        android:id="@+id/switchShowTotalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:checked="true"
        android:clickable="true"
        android:drawableStart="@drawable/ic_show_total_info"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/show_total_info"
        android:textColor="@color/light_gray"
        android:textIsSelectable="false"
        android:textSize="14sp" />



</LinearLayout>